bpo-33712: Create the od_fast_nodes cache in OrderedDict only if needed.